--- a/_posts/2021-11-11-TDA4Alz.md
+++ b/_posts/2021-11-11-TDA4Alz.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "Topological Detection of Alzheimer's"
+category: project
 ---
 
 My final year undergraduate project explored the relationship between the topology of brain MRIs and neurogeneration. It was completed under the supervision of [Rik Sarkar](https://homepages.inf.ed.ac.uk/rsarkar/). The goal of this project was twofold:
