--- a/_posts/2021-11-11-TDA4Alz.md
+++ b/_posts/2021-11-11-TDA4Alz.md
@@ -1,5 +1,5 @@
 ---
-layout: single
+layout: wide
 title:  "Topological Detection of Alzheimer's"
 category: project
 ---
@@ -32,7 +32,7 @@ This gets us to the motivation for using topology on MRI scans. Every brain is u
 # Results
 To give a quick summary of our results from the paper, we found that topology can be used as a fairly good measure of age. However, topology struggles to identify subtle distinctions between brains with slightly abnormal ageing patterns which can be quite common. Topology on it's own is also a bad measure of Alzheimer's because it can't distinguish between degeneration due to ageing and degeneration due to the disease. In order to counteract this issue we found that by predicting the topology of a healthy brain at the subject's age and then subtracting this from their true topology we can drastically improve classification results.
 
-![Examples of residuals](/assets/images/residuals.png)
+![Examples of residuals](/assets/images/residuals.jpg)
 {: .full}
 
 # Links
