--- a/_posts/2021-11-11-TDA4Alz.md
+++ b/_posts/2021-11-11-TDA4Alz.md
@@ -8,8 +8,8 @@ category: project
 My final year undergraduate project explored the relationship between the topology of brain MRIs and neurogeneration. It was completed under the supervision of [Rik Sarkar](https://homepages.inf.ed.ac.uk/rsarkar/). The goal of this project was twofold:
 1. Identifying whether algebraic topology can act as a measure of brain deterioration, and
 2. Training more explainable models for Alzheimer's detection and brain age prediction
-![MRI scans of brains at various stages of deterioration](/assets/images/brains.png)
-{: .full}
+
+<img src="/assets/images/brains.png" width="80%">
 
 You may ask yourself what is algebraic topology? and, why do we care?
 
@@ -22,8 +22,7 @@ Topology in and of itself is a very abstract area of pure maths that emerged in 
 
 Imagine that you are given a set of points in 3D space that are randomly sampled from the surface of a donut. Now, if you didn't know what kind of distribution the points were sampled from, how would you get an idea of what that distribution could look like? One approach would be to perform some kind of regression on the points, but then, could you ensure that the donut hole would remain intact in the regression model?
 
-![Example of bumpy donut](https://eric-bunch.github.io/images/noisy_circle_persistence_simplexes.png)
-{: .full}
+<img src="https://eric-bunch.github.io/images/noisy_circle_persistence_simplexes.png" width="70%">
 *An example of points forming a bumpy donut when connected. Image courtesy of [Eric Bunch](https://eric-bunch.github.io).*
 
 This is where topological data analysis comes in. The main idea here being that if we were to inflate each point so that all the points are touching, we get something that should look vaguely like a bumpy donut. And then we can use homology to measure if this bumpy donut has the same structure as a donut. If the homologies are different then there is no way in which the bumpy donut can be smoothed to get the original shape back. However, if they are the same, there is a high chance that the points where obtained from something that looks roughly like a donut. So, topology can be used to understand the shape of data in places where traditional data science would fail.
@@ -33,8 +32,7 @@ This gets us to the motivation for using topology on MRI scans. Every brain is u
 # Results
 To give a quick summary of our results from the paper, we found that topology can be used as a fairly good measure of age. However, topology struggles to identify subtle distinctions between brains with slightly abnormal ageing patterns which can be quite common. Topology on it's own is also a bad measure of Alzheimer's because it can't distinguish between degeneration due to ageing and degeneration due to the disease. In order to counteract this issue we found that by predicting the topology of a healthy brain at the subject's age and then subtracting this from their true topology we can drastically improve classification results.
 
-![Examples of residuals](/assets/images/residuals.jpg)
-{: .full}
+<img src="/assets/images/residuals.jpg" width="60%">
 
 # Links
 The code for the experiments can be found [here](https://github.com/ameertg/BrainAgingTDA), while the paper published at the Topological Data Analysis and its Applications for Medical Data workshop can be found [here](https://link.springer.com/chapter/10.1007/978-3-030-87444-5_12).
