change everything for a button

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -35,8 +35,23 @@
       K{\"o}kciyan, Nadin},
     booktitle = "Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics: Main Volume",
     month = May,
-    year = "2023 in press",
+    year = "2023",
+    url = "https://aclanthology.org/2023.eacl-main.182/",
     address = "Online \& in person in Dubrovnik, Croatia",
     publisher = "International Conference on Computational Linguistics",
     pdf = "EACL2023-Camera-Ready.pdf"
+}
+
+@inproceedings{saadat-yazdi-etal-2024-beyond,
+    title = "Beyond Recognising Entailment: Formalising Natural Language Inference
+from an Argumentative Perspective",
+    author = {Saadat-Yazdi, Ameer and
+      K{\"o}kciyan, Nadin},
+    booktitle = "Proceedings of the 62nd Conference of the Association for Computational Linguistics: Main Volume",
+    month = August,
+    year = "2024",
+    address = "Bangkok, Thailand",
+    publisher = "International Conference on Computational Linguistics",
+    pdf = "ACL2024-Camera-Ready.pdf",
+    abstract = "In argumentation theory, argument schemes are a characterisation of stereotypical patterns of inference. There has been little work done to develop computational approaches to identify these schemes in natural language. Moreover, advancements in recognizing textual entailment lack a standardized definition of inference, which makes it challenging to compare methods trained on different datasets and rely on the generalisability of their results. In this work, we propose a rigorous approach to align entailment recognition with argumentation theory. Wagemans' Periodic Table of Arguments (PTA), a taxonomy of argument schemes, provides the appropriate framework to unify these two fields. To operationalise the theoretical model, we introduce a tool to assist humans in annotating arguments according to the PTA. Beyond providing insights into non-expert annotator training, we present Kialo-PTA24, the first multi-topic dataset for the PTA. Finally, we benchmark the performance of pre-trained language models on various aspects of argument analysis. Our experiments show that the task of argument canonicalisation poses a significant challenge for state-of-the-art models, suggesting an inability to represent argumentative reasoning and a direction for future investigation."
 }
