updated cv and bibliography

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -6,7 +6,8 @@
   year={2021},
   organization={Springer},
   abstract="Alzheimer's disease is a debilitating disease in the elderly, and is an increasing burden to the society due to an aging population. In this paper, we apply topological data analysis to structural MRI scans of the brain, and show that topological invariants make accurate predictors for Alzheimer's. Using the construct of Betti Curves, we first show that topology is a good predictor of Age. Then we develop an approach to factor out the topological signature of age from Betti curves, and thus obtain accurate detection of Alzheimer's disease. Experimental results show that topological features used with standard classifiers perform comparably to recently developed convolutional neural networks. These results imply that topology is a major aspect of structural changes due to aging and Alzheimer's. We expect this relation will generate further insights for both early detection and better understanding of the disease.",
-  url="https://link.springer.com/chapter/10.1007/978-3-030-87444-5_12"
+  url="https://link.springer.com/chapter/10.1007/978-3-030-87444-5_12",
+  pdf = "TDA21-Camera-Ready.pdf"
 }
 
 @inproceedings{saadat-yazdi-etal-2022-kevin,
@@ -25,6 +26,8 @@
     publisher = "International Conference on Computational Linguistics",
     url = "https://aclanthology.org/2022.argmining-1.9",
     pages = "104--110",
+    pdf = "ArgMining22-Camera-Ready.pdf",
+
     abstract = "The ArgMining 2022 Shared Task is concerned with predicting the validity and novelty of an inference for a given premise and conclusion pair. We propose two feed-forward network based models (KEViN1 and KEViN2), which combine features generated from several pretrained transformers and the WikiData knowledge graph. The transformers are used to predict entailment and semantic similarity, while WikiData is used to provide a semantic measure between concepts in the premise-conclusion pair. Our proposed models show significant improvement over RoBERTa, with KEViN1 outperforming KEViN2 and obtaining second rank on both subtasks (A and B) of the ArgMining 2022 Shared Task.",
 }
 
@@ -40,6 +43,23 @@
     address = "Online \& in person in Dubrovnik, Croatia",
     publisher = "International Conference on Computational Linguistics",
     pdf = "EACL2023-Camera-Ready.pdf"
+}
+
+@inproceedings{sandrine-etal-23-tool,
+author = {Chausson, Sandrine and Saadat-Yazdi, Ameer and Li, Xue and Pan, Jeff Z. and Belle, Vaishak and K\"{o}kciyan, Nadin and Ross, Bj\"{o}rn},
+title = {A Web-based Tool for Detecting Argument Validity and Novelty},
+year = {2023},
+isbn = {9781450394321},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+abstract = {Individuals engage in arguments on an everyday basis as they seek to obtain information about current affairs and engage with social media. While fact-checkers are available to help dispel misinformation, it is almost impossible for users to verify every single claim they encounter. This means that oftentimes, it is left to the user to decide whether a claim is well supported. To address this, we have developed a Web interface that allows users to input an argument, and our developed framework automatically detects its validity (soundness of logical deduction) and novelty (whether the argument is non-circular). Our Web-based tool could be used by social media users who wish to evaluate the information they consume. As part of one of the modules developed at the University of Edinburgh, our tool will be deployed as a teaching tool for the students who study argumentation.},
+booktitle = {Proceedings of the 2023 International Conference on Autonomous Agents and Multiagent Systems},
+pages = {3053–3055},
+numpages = {3},
+keywords = {computational argumentation, knowledge graphs, natural language inference, neural networks},
+location = {<conf-loc>, <city>London</city>, <country>United Kingdom</country>, </conf-loc>},
+series = {AAMAS '23},
+pdf = "AAMAS23-Camera-Ready.pdf"
 }
 
 @inproceedings{saadat-yazdi-etal-2024-beyond,
