fixed music and new thought

--- a/_posts/2021-11-11-TDA4Alz.md
+++ b/_posts/2021-11-11-TDA4Alz.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 classes: wide
-title:  "Topological Detection of Alzheimer's"
+title:  "topological detection of alzheimer's"
 category: project
 ---
 
